[project]
name = "py-reverse-proxy-poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httptools>=0.6.4",
    "pyyaml>=6.0.2",
    "uvloop>=0.21.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.7",
    "setuptools>=80.0.0",
    "types-pyyaml>=6.0.12.20250402",
    "types-setuptools>=79.0.0.20250422",
]
