[project]
name = "py-reverse-proxy-poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httptools>=0.6.4",
    "pyyaml>=6.0.2",
    "uvloop>=0.21.0",
]

[dependency-groups]
dev = [
    "aiohttp>=3.11.18",
    "cython>=3.0.12",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.11.7",
    "setuptools>=80.0.0",
    "types-pyyaml>=6.0.12.20250402",
    "types-setuptools>=79.0.0.20250422",
]

[build-system]
requires = ["setuptools>=61.0", "wheel", "Cython>=3.0"]
build-backend = "setuptools.build_meta"

[build_ext]
extra_compile_args = "-O3 -march=native"

[tool.setuptools]
package-dir = {"" = "src"}
packages = []

[[tool.setuptools.ext-modules]]
name = "route_trie"
sources = ["src/route_trie.pyx"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
asyncio_mode = "auto"
